syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.obby.android.localscreenshare.grpc.screenstream";
option java_outer_classname = "ScreenStream";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ScreenStreamService {
  rpc GetScreenStream(google.protobuf.Empty) returns (stream ScreenFrame) {}
}

message ScreenFrame {
  google.protobuf.Timestamp timestamp = 1;
  bytes data = 2;
}
